--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  <h1>
-    nkjkjjk
-  </h1>
+  <div class="top-panel"></div>
+  <div class="content">
+    <div class="tabs">
+      <div class="tab home active">home</div>
+      <div class="tab video hide">video</div>
+      <div class="tab podcasts hide">podcasts</div>
+      <div class="tab games hide">games</div>
+    </div>
+  </div>
+  <div class="bottom-panel">
+      <nav class="menu">
+        <div class="menu__item"><img id="home" src="assets/homepage.svg" alt="" class="menu__item-img"></div>
+        <div class="menu__item"><img id="video" src="assets/video.svg" alt="" class="menu__item-img"></div>
+        <div class="menu__item"><img id="podcasts" src="assets/podcast.svg" alt="" class="menu__item-img"></div>
+        <div class="menu__item"><img id="games" src="assets/game.svg" alt="" class="menu__item-img"></div>
+      </nav>
+    </div>
+  </div>
+  <script src="js/index.js"></script>
 </body>
+
 </html>
