--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           function (err) { console.error("Error signing in", err); });
     }
     function loadClient() {
-      gapi.client.setApiKey("YOUR_API_KEY");
+      gapi.client.setApiKey("AIzaSyCR6VpUIhS3dU53D5bcck38zh6KcnFQMxI");
       return gapi.client.load("https://www.googleapis.com/discovery/v1/apis/youtube/v3/rest")
         .then(function () { console.log("GAPI client loaded for API"); },
           function (err) { console.error("Error loading GAPI client for API", err); });
