--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           function (err) { console.error("Execute error", err); });
     }
     gapi.load("client:auth2", function () {
-      gapi.auth2.init({ client_id: "YOUR_CLIENT_ID" });
+      gapi.auth2.init({ client_id: "333472308011-s6donmt1r70gsp75ksbb8k1jn43m7gum.apps.googleusercontent.com" });
     });
   </script>
 </body>
