--- a/index.html
+++ b/index.html
@@ -32,24 +32,25 @@
   </div>
   <script src="js/index.js"></script>
   <script src="https://apis.google.com/js/api.js"></script>
+  <script src="https://apis.google.com/js/api.js"></script>
   <script>
     /**
      * Sample JavaScript code for youtube.channels.list
      * See instructions for running APIs Explorer code samples locally:
      * https://developers.google.com/explorer-help/guides/code_samples#javascript
      */
-
+  
     function authenticate() {
       return gapi.auth2.getAuthInstance()
-        .signIn({ scope: "https://www.googleapis.com/auth/youtube.readonly" })
-        .then(function () { console.log("Sign-in successful"); },
-          function (err) { console.error("Error signing in", err); });
+          .signIn({scope: "https://www.googleapis.com/auth/youtube.readonly"})
+          .then(function() { console.log("Sign-in successful"); },
+                function(err) { console.error("Error signing in", err); });
     }
     function loadClient() {
       gapi.client.setApiKey("AIzaSyCR6VpUIhS3dU53D5bcck38zh6KcnFQMxI");
       return gapi.client.load("https://www.googleapis.com/discovery/v1/apis/youtube/v3/rest")
-        .then(function () { console.log("GAPI client loaded for API"); },
-          function (err) { console.error("Error loading GAPI client for API", err); });
+          .then(function() { console.log("GAPI client loaded for API"); },
+                function(err) { console.error("Error loading GAPI client for API", err); });
     }
     // Make sure the client is loaded and sign-in is complete before calling this method.
     function execute() {
@@ -57,20 +58,20 @@
         "part": [
           "snippet,contentDetails,statistics"
         ],
-        "id": [
-          "UC_x5XG1OV2P6uZZ5FSM9Ttw"
-        ]
+        "mine": true
       })
-        .then(function (response) {
-          // Handle the results here (response.result has the parsed body).
-          console.log("Response", response);
-        },
-          function (err) { console.error("Execute error", err); });
+          .then(function(response) {
+                  // Handle the results here (response.result has the parsed body).
+                  console.log("Response", response);
+                },
+                function(err) { console.error("Execute error", err); });
     }
-    gapi.load("client:auth2", function () {
-      gapi.auth2.init({ client_id: "333472308011-s6donmt1r70gsp75ksbb8k1jn43m7gum.apps.googleusercontent.com" });
+    gapi.load("client:auth2", function() {
+      gapi.auth2.init({client_id: "333472308011-s6donmt1r70gsp75ksbb8k1jn43m7gum.apps.googleusercontent.com"});
     });
   </script>
+ 
+  
 </body>
 
 </html>
