--- a/index.html
+++ b/index.html
@@ -6,18 +6,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="css/main.css">
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 
 <body>
-  <div class="top-panel"></div>
   <div class="content">
     <div class="tabs">
-      <div class="tab home active">home
-        <button onclick="authenticate().then(loadClient)">authorize and load</button>
-        <button onclick="execute()">execute</button>
+      <div class="tab home active">home</div>
+      <div class="tab videos hide">
+        <h2 class="tab-title">Что посмотреть?</h2>
+        <div class="videos__list">
+          <div class="video">
+            <div class="video__preview">
+              <a href="" class="video-link">
+                <img src="assets/video.svg" alt="play" class="video__play">
+              </a>
+            </div>
+            <div class="video__info">
+              <div class="video__info-title">${title}</div>
+              <div class="video__info-desc">${desc}</div>
+              <div class="video__info-date">${date}</div>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="tab videos hide">videos</div>
-      <div class="tab podcasts hide">podcasts</div>
+      <div class="tab music hide">music</div>
       <div class="tab games hide">games</div>
     </div>
   </div>
@@ -25,53 +38,16 @@
     <nav class="menu">
       <div class="menu__item"><img id="home" src="assets/homepage.svg" alt="" class="menu__item-img"></div>
       <div class="menu__item"><img id="videos" src="assets/video.svg" alt="" class="menu__item-img"></div>
-      <div class="menu__item"><img id="podcasts" src="assets/podcast.svg" alt="" class="menu__item-img"></div>
+      <div class="menu__item"><img id="music" src="assets/music.svg" alt="" class="menu__item-img"></div>
       <div class="menu__item"><img id="games" src="assets/game.svg" alt="" class="menu__item-img"></div>
     </nav>
   </div>
   </div>
   <script src="js/index.js"></script>
   <script src="https://apis.google.com/js/api.js"></script>
-  <script src="https://apis.google.com/js/api.js"></script>
-  <script>
-    /**
-     * Sample JavaScript code for youtube.channels.list
-     * See instructions for running APIs Explorer code samples locally:
-     * https://developers.google.com/explorer-help/guides/code_samples#javascript
-     */
-  
-    function authenticate() {
-      return gapi.auth2.getAuthInstance()
-          .signIn({scope: "https://www.googleapis.com/auth/youtube.readonly"})
-          .then(function() { console.log("Sign-in successful"); },
-                function(err) { console.error("Error signing in", err); });
-    }
-    function loadClient() {
-      gapi.client.setApiKey("AIzaSyCR6VpUIhS3dU53D5bcck38zh6KcnFQMxI");
-      return gapi.client.load("https://www.googleapis.com/discovery/v1/apis/youtube/v3/rest")
-          .then(function() { console.log("GAPI client loaded for API"); },
-                function(err) { console.error("Error loading GAPI client for API", err); });
-    }
-    // Make sure the client is loaded and sign-in is complete before calling this method.
-    function execute() {
-      return gapi.client.youtube.channels.list({
-        "part": [
-          "snippet,contentDetails,statistics"
-        ],
-        "mine": true
-      })
-          .then(function(response) {
-                  // Handle the results here (response.result has the parsed body).
-                  console.log("Response", response);
-                },
-                function(err) { console.error("Execute error", err); });
-    }
-    gapi.load("client:auth2", function() {
-      gapi.auth2.init({client_id: "333472308011-s6donmt1r70gsp75ksbb8k1jn43m7gum.apps.googleusercontent.com"});
-    });
-  </script>
- 
-  
+  <script src="js/playlist.js"></script>
+
+
 </body>
 
 </html>
